2002-03-29  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-plug.c: (bonobo_plug_button_event): ungrab the
	pointer here, so our parents can do grabs.

2002-04-01  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-toolbar.c
	(create_dockitem): remove bogus double
	detachable check.
	(impl_bonobo_ui_sync_toolbar_update_root):
	set detachable (or not) on sync.

	* bonobo/bonobo-dock-item.c
	(bonobo_dock_item_set_locked): impl.

2002-03-28  jacob berkman  <jacob@ximian.com>

	* bonobo/bonobo-selector.c (signals): 
	* bonobo/bonobo-ui-engine.c (signals): these should be static

2002-03-28  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-file-selector-util.c
	(create_control): do an explicit construct to avoid
	the warning.

	* bonobo/bonobo-widget.c
	(bonobo_widget_launch_component): move activation
	exception warning to
	(bonobo_widget_new_control): here.

2002-03-27  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-window.c
	(bonobo_window_key_release_event): chain to
	key_release not key_press.

2002-03-26  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar-item.c
	(bonobo_ui_toolbar_item_class_init): clobber
	focus handling for items here.

	* bonobo/bonobo-dock-item-grip.c
	(bonobo_dock_item_grip_key_press_event): only
	allow band traversal if not floating.

	* bonobo/bonobo-dock.c
	(bonobo_dock_focus_roll): upd. to include
	floating children.

	* bonobo/bonobo-ui-toolbar.c
	(bonobo_ui_toolbar_class_init): klobber focus stuff.

	* bonobo/bonobo-dock-item.c
	(bonobo_dock_item_focus): rename
	(bonobo_widget_clobber_focus): to this.

2002-03-26  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-dock-item-grip.c
	(bonobo_dock_item_grip_dock),
	(bonobo_dock_item_grip_undock): split out of
	(bonobo_dock_item_grip_activate): here.
	(bonobo_dock_item_grip_do_action): use them.
	(bonobo_dock_item_grip_get_n_actions): impl.

2002-03-25  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-a11y.c
	(bonobo_a11y_get_atk_object),